--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -81,6 +81,8 @@
       <%= f.label :locatlion, "Localização da Venda" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="addresspicker_map"></label>
       <div class="controls">
         <%= f.text_field :location,:placeholder =>"Localização da venda..." ,:class=>"form-control", :id=>"addresspicker_map",autocomplete: "off"%>
+        <%= f.hidden_field :coordX, id:"coordX" %>
+        <%= f.hidden_field :coordY, id:"coordY" %>
       </div>
 
       <div style="width:100%;height:350px;margin-top:20px">
@@ -89,8 +91,6 @@
       </div>
       <div style="float:right">
           <span class="label label-danger" id="city">-</span>
-          <span class="label label-primary" id="coordX">X</span>
-          <span class="label label-primary" id="coordY">Y</span>
       </div>
     </div>
 
@@ -199,8 +199,8 @@
             });
 
             addresspickerMap.on("addressChanged", function(evt, address) {
-                $('#coordX').text(address.geometry.location.lat());
-                $('#coordY').text(address.geometry.location.lng());
+                $('#coordX').val(address.geometry.location.lat());
+                $('#coordY').val(address.geometry.location.lng());
                 $('#city').text(address.address_components[2].long_name);
             });
 
