--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -164,6 +164,7 @@
                  <%= (@ad.created_at + 1.week).strftime("%d - %m - %Y") %>
               </div>
             </div>
+           <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalMap"><i class="fa fa-plus-circle"></i>Ver no Mapa</button>
             <br>
             <div style="width: 100%; text-align: right; margin-top: 10px;">
               <div class="fb-share-button sharebutton" data-href="<%= ad_url(@ad) %>" data-type="button">
@@ -259,3 +260,55 @@
     <span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar
   </button>
 </div>
+
+<%# MODAL %>
+<div id="modalMap" class="modal fade" tabindex="-1" data-width="760" style="display: none; margin-top:-25%">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+    <h4 class="modal-title"><i class="fa fa-map-marker"></i> Localização do Anúncio</h4>
+  </div>
+  <div class="modal-body">
+    <div class="row" id="post-review-box" >
+      <div class="col-md-12">
+        <div class="control-group">
+          <div class="controls">
+            <div class="input-group input-group-sm">
+              <span class="input-group-addon"><i class="fa fa-map-marker"></i></span>
+              <input type="text" class="form-control" value="<%= @ad.location %>" enabled="false" id="addresspicker_map" name="location" disabled>
+            </div>
+          </div>
+
+            <div id="map" style="width:100%;height:350px"></div>
+            <div id="location" class=""></div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+  </div>
+</div>
+<%# FIM MODAL %>
+
+<script>
+    function initialize() {
+        var myLatlng = new google.maps.LatLng("<%if !@ad.coordX.nil? %><%=  @ad.coordX %><% else%> 41.568197 <% end %>","<%if !@ad.coordY.nil? %><%=  @ad.coordY %><% else%> -8.381935 <% end %>");
+        var mapOptions = {
+            zoom: 7,
+            center: myLatlng
+        }
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+        var marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            zoom: 8,
+            title: '<%if !@ad.coordX.nil? && !@ad.coordY.nil?  %><%= @ad.location %><%else%> "Localização não encontrada!" <%end%>'
+        });
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
+
+
+</script>
