[Feature] More stats in admin Zone (in Progress)

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -238,9 +238,9 @@
               </div>
               <div class="panel-body">
                 <%= pie_chart( @dashboard.ads_per_category ) %>
-                <!--div class="text-right">
-                  <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                </div-->
+                <div class="text-right">
+                  <a href="stats">Mais estatísticas <i class="fa fa-arrow-circle-right"></i></a>
+                </div>
               </div>
             </div>
           </div><!-- END ADS PER CATEGORY GRAPH -->
@@ -254,9 +254,9 @@
               </div>
               <div class="panel-body">
                 <%= pie_chart( @dashboard.users_per_district ) %>
-                <!--div class="text-right">
-                  <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                </div-->
+                <div class="text-right">
+                  <a href="stats">Mais estatísticas <i class="fa fa-arrow-circle-right"></i></a>
+                </div>
               </div>
             </div>
           </div><!-- END USERS PER DISTRICT GRAPH -->
