--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div style="width:100%; display:inline-block;">
     <div style="float:left; min-width:375px;">
       <ul id='footer-info'>
-        <li><a href="#">Termos e Condições</a></li>
+        <li><%= link_to "Termos e condições", terms_and_condition_path %></li>
         <li><a href="#">Privacidade</a></li>
         <li><a href="#">Contactos</a></li>
       </ul>
