--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -271,7 +271,7 @@
 </div>
 
 <%# MODAL %>
-<div id="modalMap" class="modal fade" tabindex="-1" data-width="760" style="display: none; margin-top:-25%">
+<div id="modalMap" class="modal fade" tabindex="-1" data-width="760" style="display: none; margin-top:-30%;">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
     <h4 class="modal-title"><i class="fa fa-map-marker"></i> Localização do Anúncio</h4>
@@ -287,7 +287,7 @@
             </div>
           </div>
 
-            <div id="map" style="width:100%;height:350px"></div>
+            <div id="map-canvas" style="width:425px;height:350px"></div>
             <div id="location" class=""></div>
 
         </div>
@@ -300,14 +300,15 @@
 </div>
 <%# FIM MODAL %>
 
+
 <script>
     function initialize() {
-        var myLatlng = new google.maps.LatLng("<%if !@ad.coordX.nil? %><%=  @ad.coordX %><% else%> 41.568197 <% end %>","<%if !@ad.coordY.nil? %><%=  @ad.coordY %><% else%> -8.381935 <% end %>");
+        var myLatlng = new google.maps.LatLng(<%if !@ad.coordX.nil? %><%=  @ad.coordX %><% else%> 41.568197 <% end %>,<%if !@ad.coordY.nil? %><%=  @ad.coordY %><% else%> -8.381935 <% end %>);
         var mapOptions = {
             zoom: 7,
             center: myLatlng
         }
-        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+        var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
         var marker = new google.maps.Marker({
             position: myLatlng,
@@ -318,6 +319,5 @@
     }
 
     google.maps.event.addDomListener(window, 'load', initialize);
-
 
 </script>
