--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -19,7 +19,7 @@
           <%=link_to image_tag(answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), answer.user %>
         </div>
         <div style="float:center;">
-          <%= answer.user.name %>
+          <%= get_first_last_name(answer.user.name) %>
         </div>
       </div>
       <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
