--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -18,7 +18,7 @@
     <%=link_to image_tag(current_user.avatar.url(:medium),:width => "70%",:class => "img-circle"), current_user %>
   </div>
   <div style="float:center;">
-    <%= current_user.name %>
+    <%= get_first_last_name(current_user.name) %>
   </div>
 </div>
 
