--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -153,7 +153,7 @@
             <div style="width:100%; padding: 5px 0;">
               <div style="float:left;">
                  <strong>Vendedor:</strong>
-                 <%= link_to @ad.user.name, @ad.user, class:"url" %>
+                 <%= link_to get_first_last_name(@ad.user.name), @ad.user, class:"url" %>
               </div>
               <div style="float:right; text-align:right; min-width:150px;">
                  <strong>Preço:</strong>
