--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -15,6 +15,7 @@
             <li><%= link_to "<i class='fa fa-angle-right'></i>Perfil".html_safe , user_path(current_user) %></li>
             <li><%= link_to "<i class='fa fa-angle-right'></i>Mensagens".html_safe , messages_path %></li>
             <li><%= link_to "<i class='fa fa-angle-right'></i>Mural".html_safe , feed_path %></li>
+            <li><%= link_to "<i class='fa fa-angle-right'></i>Calendário".html_safe , calendar_path %></li>
           </ul>
         </div>
       </div>
