--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -9,32 +9,6 @@
   <% end %>
 </ol>
 
-<!--FACEBOOK SDK START -->
-<div id="fb-root"></div>
-<script>
-   // Load the SDK asynchronously
-   (function(d, s, id) {
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) return;
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/pt_PT/all.js#xfbml=1&appId=547514635336381";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-<!--FACEBOOK SDK END -->
-<!--TWITTER SDK START -->
-<script>
-   !function(d,s,id){
-     var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-     if(!d.getElementById(id)){
-       js=d.createElement(s);
-       js.id=id;
-       js.src=p+'://platform.twitter.com/widgets.js';
-       fjs.parentNode.insertBefore(js,fjs);
-     }
-   }(document, 'script', 'twitter-wjs');
-</script>
-<!--TWITTER SDK END -->
 
 <section class="panel" style="border: 1px solid #dddddd;">
   <header class="panel-heading border-header" style="vertical-align:middle; background-color:#f5f5f5; border-bottom: 1px solid #dddddd;">
@@ -71,7 +45,9 @@
     <div class="pull-left">
       <div class="fb-share-button sharebutton" data-href="<%= academy_question_url(@academy_question) %>" data-type="button"></div>
       <div class="sharebutton"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none"
-        data-text="<%= 'Pergunta - ' + @academy_question.title + ' - ' + academy_question_url(@academy_question) + ' - #AgroSocial' %>"
+        data-url="<%= academy_question_url(@academy_question) %>"
+        data-hashtags="AgroSocial"
+        data-text="<%= 'Pergunta - ' + @academy_question.title %>"
       >Tweet</a></div>
     </div>
     &nbsp;
