--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -11,8 +11,37 @@
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
+    
+
+    <%= content_for?(:head) ? yield(:head) : '' %>
   </head>
   <body>
+<!--FACEBOOK SDK START -->
+<div id="fb-root"></div>
+<script>
+   // Load the SDK asynchronously
+   (function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/pt_PT/all.js#xfbml=1&appId=547514635336381";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+<!--FACEBOOK SDK END -->
+<!--TWITTER SDK START -->
+<script>
+   !function(d,s,id){
+     var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+     if(!d.getElementById(id)){
+       js=d.createElement(s);
+       js.id=id;
+       js.src=p+'://platform.twitter.com/widgets.js';
+       fjs.parentNode.insertBefore(js,fjs);
+     }
+   }(document, 'script', 'twitter-wjs');
+</script>
+<!--TWITTER SDK END -->  
     <div id="header">
       <%= render "layouts/header"%>
     </div>
