--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -82,7 +82,7 @@
 
               <% if (current_user && @user.id == current_user.id) %>
                 <li>
-                  <%= link_to " Feeds".html_safe , feed_path, :class => "fa fa-list" %>
+                  <%= link_to " Mural".html_safe , feed_path, :class => "fa fa-list" %>
                 </li>
               <% end %>
               <li>
