--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,37 +23,12 @@
   <div class="modal-body">
 
     <div class="container">
-      <form >
-        <div class="row">
-          <div class="col-sm-3 col-md-3">
-            <label>First Name</label> <input class="span3 form-control" placeholder="Your First Name" type="text"> <label>Last Name</label>
-            <input class="span3 form-control" placeholder="Your Last Name" type="text">
-            <label>Email Address</label> <input class="span3 form-control" placeholder="Your email address" type="text"> <label>Subject</label>
-            <select class="span3" id="subject" name="subject">
-              <option selected="" value="na">
-                Choose One:
-              </option>
-
-              <option value="service">
-                General Customer Service
-              </option>
-
-              <option value="suggestions">
-                Suggestions
-              </option>
-
-              <option value="product">
-                Product Support
-              </option>
-            </select>
-          </div>
-
-          <div class="col-sm-5 col-md-5">
-            <label>Message</label>
-            <textarea class="input-xlarge span5" id="message" name="message" rows="10">    </textarea>
-          </div><button class="btn btn-primary pull-right" type="submit">Send</button>
-        </div>
-      </form>
+      <div class="row">
+        <input class="form-control" id="name" placeholder="Nome...">
+        <input type="email" class="form-control" id="email" placeholder="Email...">
+        <input class="form-control" id="subject" placeholder="Assunto...">
+        <textarea class="form-control" id="description" rows="3" placeholder="Descrição"></textarea>
+      </div>
     </div>
 
   </div>
