og:image safeguard

--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
   <!-- Facebook -->
   <meta property="og:title" content="<%= @academy_question.title %>"/>
-  <meta property="og:image" content="<%= root_url.chop + @academy_question.user.avatar.url %>"/>
+  <meta property="og:image" content="http://teste94.di.uminho.pt/assets/defaultQuestion.png"/>
   <meta property="og:site_name" content="AgroSocial"/>
   <meta property="og:description" content="<%= @academy_question.text %>"/>
   <meta property="og:url" content="<%= academy_question_url(@academy_question) %>"/>
