--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -14,16 +14,16 @@
   <meta property="og:title" content="<%= @academy_tutorial.title %>"/>
   <meta property="og:image" content="http://teste94.di.uminho.pt/assets/defaultTutorial.png"/>
   <meta property="og:site_name" content="AgroSocial"/>
-  <meta property="og:description" content="<%= @academy_tutorial.text %>"/>
+  <meta property="og:description" content="<%= @academy_tutorial.text[0..70].gsub(/\s\w+\s*$/,'...') %>"/>
   <meta property="og:url" content="<%= academy_tutorial_url(@academy_tutorial) %>"/>
   <meta property="fb:app_id" content="547514635336381"/>
   <!-- Twitter -->
   <meta name="twitter:card" content="AgroSocial" />
   <meta name="twitter:title" content="<%= @academy_tutorial.title %>" />
-  <meta name="twitter:description" content="<%= @academy_tutorial.text %>" />
+  <meta name="twitter:description" content="<%= @academy_tutorial.text[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="twitter:image" content="http://teste94.di.uminho.pt/assets/defaultTutorial.png" />
   <!-- Google -->
-  <meta name="description" content="<%= @academy_tutorial.text %>" />
+  <meta name="description" content="<%= @academy_tutorial.text[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="keywords" content="Tutorial" />
   <meta name="author" content="<%= @academy_tutorial.user.name %>" />
   <meta name="copyright" content="© 2014 AGROSOCIAL. Todos os direitos reservados." />
