--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -23,16 +23,16 @@
   <meta property="og:title" content="<%= @academy_workshop.title %>"/>
   <meta property="og:image" content="http://teste94.di.uminho.pt/assets/defaultWork.png"/>
   <meta property="og:site_name" content="AgroSocial"/>
-  <meta property="og:description" content="<%= @academy_workshop.description %>"/>
+  <meta property="og:description" content="<%= @academy_workshop.description[0..70].gsub(/\s\w+\s*$/,'...') %>"/>
   <meta property="og:url" content="<%= academy_workshop_url(@academy_workshop) %>"/>
   <meta property="fb:app_id" content="547514635336381"/>
   <!-- Twitter -->
   <meta name="twitter:card" content="AgroSocial" />
   <meta name="twitter:title" content="<%= @academy_workshop.title %>" />
-  <meta name="twitter:description" content="<%= @academy_workshop.description %>" />
+  <meta name="twitter:description" content="<%= @academy_workshop.description[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="twitter:image" content="http://teste94.di.uminho.pt/assets/defaultWork.png" />
   <!-- Google -->
-  <meta name="description" content="<%= @academy_workshop.description %>" />
+  <meta name="description" content="<%= @academy_workshop.description[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="keywords" content="Workshop" />
   <meta name="author" content="<%= @academy_workshop.user.name %>" />
   <meta name="copyright" content="© 2014 AGROSOCIAL. Todos os direitos reservados." />
