--- a/app/views/event/events/show.html.erb
+++ b/app/views/event/events/show.html.erb
@@ -20,16 +20,16 @@
   <meta property="og:title" content="<%= @event_event.title %>"/>
   <meta property="og:image" content="<%= root_url.chop + @event_event.image.url %>"/>
   <meta property="og:site_name" content="AgroSocial"/>
-  <meta property="og:description" content="<%= @event_event.description %>"/>
+  <meta property="og:description" content="<%= @event_event.description[0..70].gsub(/\s\w+\s*$/,'...') %>"/>
   <meta property="og:url" content="<%= event_event_url(@event_event) %>"/>
   <meta property="fb:app_id" content="547514635336381"/>
   <!-- Twitter -->
   <meta name="twitter:card" content="AgroSocial" />
   <meta name="twitter:title" content="<%= @event_event.title %>" />
-  <meta name="twitter:description" content="<%= @event_event.description %>" />
+  <meta name="twitter:description" content="<%= @event_event.description[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="twitter:image" content="<%= root_url.chop + @event_event.image.url %>" />
   <!-- Google -->
-  <meta name="description" content="<%= @event_event.description %>" />
+  <meta name="description" content="<%= @event_event.description[0..70].gsub(/\s\w+\s*$/,'...') %>" />
   <meta name="keywords" content="Event" />
   <meta name="author" content="<%= @event_event.user.name %>" />
   <meta name="copyright" content="© 2014 AGROSOCIAL. Todos os direitos reservados." />
