[FEATURE UPDATE] redirect when login to place where we were

--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -90,11 +90,23 @@
   <section class="panel">
     <header class="panel-heading">
       <div>
-        <p>Inicie sessão para poder responder: <%= link_to "Iniciar Sessão", new_user_session_path, class:"url" %> ou <%= link_to "Registar", new_user_registration_path, class:"url" %></p>
+        <p>Inicie sessão para poder responder: <%= link_to "Iniciar Sessão", new_user_session_path, class:"url", id: "question_log_in" %> ou <%= link_to "Registar", new_user_registration_path, class:"url" %></p>
       </div>
     </header>
   </section>
 </div>
+<script type="text/javascript">
+  $(function(){
+    $("#question_log_in").click(function(){
+      $.ajax({
+        url: '/set_session_question/<%= @academy_question.id %>',
+        dataType: 'script',
+        type: "POST"
+      });
+    })
+  })
+</script>
+
 <% end %>
 
 <%#  Back button for unloged users   %>
