--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-  <h1>Dashboard <small>Statistics Overview</small></h1>           
+  <h1>Dashboard <small>Zona de estatísticas</small></h1>           
 
       <!--######## DAILY STATS ###########-->
 
