--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -69,7 +69,7 @@
            </li>
 
            <li>
-             <%= link_to "<i class='fa fa-square'></i> Contact".html_safe  , admin_contacts_path %>
+             <%= link_to "<i class='fa fa-envelope'></i> Contactos".html_safe  , admin_contacts_path %>
            </li>
 
            <li>
