--- a/app/views/event/events/show.html.erb
+++ b/app/views/event/events/show.html.erb
@@ -34,6 +34,7 @@
   <meta name="author" content="<%= @event_event.user.name %>" />
   <meta name="copyright" content="© 2014 AGROSOCIAL. Todos os direitos reservados." />
   <meta name="application-name" content="AgroSocial" />
+  <link rel="canonical" href="<%= event_event_url(@event_event) %>">
 <% end %>
 
 <section class="panel" style="border: 1px solid #dddddd;">
@@ -81,6 +82,7 @@
           <%= link_to get_first_last_name(@event_event.user.name), @event_event.user, class:"url" %>
         </div>
         <div style="float:right;">
+          <!-- Share buttons -->
           <div class="fb-share-button sharebutton" data-href="<%= event_event_url(@event_event) %>" data-type="button"></div>
           <div class="sharebutton">
             <a href="https://twitter.com/share" class="twitter-share-button" data-count="none"
@@ -89,6 +91,14 @@
               data-text="<%= 'Event - ' + @event_event.title%>"
             >Tweet</a>
           </div>
+          <div class="g-plus" data-action="share" data-annotation="none"></div>
+          <script type="text/javascript">
+            (function() {
+              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+              po.src = 'https://apis.google.com/js/platform.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+          </script>
         </div>
       </div>
     </div>
