--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -19,6 +19,7 @@
   <meta name="application-name" content="AgroSocial" />
   <link rel="canonical" href="<%= academy_question_url(@academy_question) %>">
 <% end %>
+<img src="<%= root_url %>assets/defaultQuestion.png" style="display:none;visibility:hidden"></img>
 
 <%##  render the question  %>
 <%= render 'question' %>
