--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -30,6 +30,7 @@
   <meta name="application-name" content="AgroSocial" />
   <link rel="canonical" href="<%= academy_tutorial_url(@academy_tutorial) %>">
 <% end %>
+<img src="<%= root_url %>assets/defaultTutorial.png" style="display:none;visibility:hidden"></img>
 
 <p id="notice"><%= notice %></p>
 
