--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -39,6 +39,7 @@
   <meta name="application-name" content="AgroSocial" />
   <link rel="canonical" href="<%= academy_workshop_url(@academy_workshop) %>">
 <% end %>
+<img src="<%= root_url %>assets/defaultWork.png" style="display:none;visibility:hidden"></img>
 
 <p id="notice"><%= notice %></p>
 
