--- a/app/views/academy/workshop_registrations/_form.html.erb
+++ b/app/views/academy/workshop_registrations/_form.html.erb
@@ -16,7 +16,9 @@
     <%= f.number_field :workshop_id ,:value=> @academy_workshop.id %>
   </div>
   <div class="field">
-    <%= f.hidden_field :user_id ,:value=> current_user.id %>
+    <% if user_signed_in? %>
+      <%= f.hidden_field :user_id ,:value=> current_user.id %>
+    <% end %>
   </div>
 
   <div class="actions text-center workshop_form">
