--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -2,6 +2,6 @@
 	<p>
 		<h1 class="errors-title"> AgroSocial </h1>
 	    <h4 class="errors-slogan">A SEMENTE DO SEU NEGÓCIO</h4>
-	    <h3>500</h3>
+	    <h3>Ocorreu um erro inesperado, estamos a tratar do assunto</h3>
 	</p>
 </div>   
